# kanemi

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
app/: README.md  package-lock.json  package.json  tailwind.config.js
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src-tauri/src/commands/: geocoder.rs  mod.rs  observations.rs  precipitation.rs
app/src/lib/: app.ts
app/src/lib/components/location/: Location.svelte  LocationSelected.svelte
app/src/lib/components/precipitation/: Precipitation.svelte
app/src/lib/components/settings/: ApiKey.svelte  LocationSetting.svelte  StringSetting.svelte
app/src/lib/core/managers/: location-manager.svelte.ts  observation-manager.svelte.ts  precipitation-manager.svelte.ts  settings-manager.svelte.ts
app/src/lib/core/models/: location.ts  nowcast-prediction.ts  observation.ts
app/src/lib/core/models/settings/: location-setting.ts  setting.ts  string-setting.ts
app/src/lib/windows/: Settings.svelte  Weather.svelte
app/src/routes/: +layout.svelte  +page.svelte
example_data/: KMDS__OPER_P___10M_OBS_L2_202412201930.nc  RAD_NL25_RAC_FM_202412222055.h5  example.hdf5
kanecli/: Cargo.toml
kanecli/src/: main.rs
kanecli/src/commands/: cy43p1.rs  download.rs  forecast.rs  geocoder.rs  help.rs  mod.rs  notifications.rs  nowcast_precipitation.rs
kanecli/src/handlers/: cy43p1.rs  download.rs  forecast.rs  geocoder.rs  mod.rs  notification.rs  nowcast_precipitation.rs
kanemi/: Cargo.toml
kanemi/benches/: cy43_p1_reader.rs
kanemi/src/: lib.rs
kanemi/src/actual_synoptic_observations/: dataset.rs  mod.rs
kanemi/src/actual_synoptic_observations/models/: mod.rs  station.rs
kanemi/src/dataplatform/: api.rs  errors.rs  mod.rs  notification.rs
kanemi/src/dataplatform/models/: config.rs  response.rs
kanemi/src/errors/: cy43p1.rs  dataplatform.rs  dataset.rs  mod.rs  projection.rs
kanemi/src/harmonie_cy43_p1/: dataset.rs  grib_info.rs  mod.rs  reader.rs  wind_image.rs
kanemi/src/harmonie_cy43_p1/reader/: bits.rs  errors.rs  grib_info.rs  grib_reader.rs  mod.rs
kanemi/src/nowcast/: dataset.rs  errors.rs  image.rs  mod.rs  projection.rs  transformation.rs
kanemi/src/nowcast_precipitation/: dataset.rs  image.rs  projection.rs  transformation.rs
kanemi/src/nowcast_precipitation/models/: forecast.rs  mod.rs
kanemi/src/utils/: calculations.rs  mod.rs
knmi_nowcast/: Cargo.toml
knmi_nowcast/src/dataplatform/: api.rs  notification.rs
knmi_nowcast/src/nowcast/: dataset.rs  errors.rs  image.rs  mod.rs  projection.rs  transformation.rs
main/: Cargo.toml
main/src/: cli.rs  main.rs
main/src/commands/: forecast.rs  geocoder.rs  mod.rs
main/src/functions/: forecast.rs  mod.rs  notification.rs
main/src/handlers/: geocoder.rs
pdok_geocoder/: Cargo.toml
pdok_geocoder/src/: lib.rs  location_server.rs
pdok_geocoder/src/models/: free.rs  mod.rs  reverse.rs  shared.rs
pdok_geocoder/src/options/: free.rs  mod.rs  reverse.rs
pdok_location/: Cargo.toml
pdok_location/src/: lib.rs  location_server.rs
pdok_location/src/models/: mod.rs  options.rs  response.rs
src/: lib.rs  main.rs
src/knmi/: mod.rs
src/knmi/dataplatform/: api.rs
src/knmi/nowcast/: dataset.rs
src/knmi/utils/: projection.rs
src/knmi_nowcast/: mod.rs
src/knmi_nowcast/dataplatform/: api.rs
src/knmi_nowcast/dataplatform/models/: response.rs
src/knmi_nowcast/nowcast/: dataset.rs  projection.rs  transformation.rs
