[package]
name = "knmi-nowcast"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdf5 = { package = "hdf5-metno", version = "0.9.0" }
ndarray = "0.16.1"
