[package]
name = "knmi_nowcast"
version = "0.1.0"
authors = ["Tim Ebben"]
license = "MIT"
edition = "2021"

[lib]
path = "src/lib.rs"

repository = "https://github.com/tebben/knmi-nowcast-precipitation"
keywords = ["KNMI", "HDF5", "nowcast", "precipitation"]

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdf5 = { package = "hdf5-metno", version = "0.9.0" }
ndarray = "0.16.1"
proj4rs = "0.1.5"
once_cell = "1.20.2"
