[workspace]
resolver = "2"
members = [
    "kanecli",
    "kanemi",
    "pdok_geocoder",
]

[profile.release]
opt-level = 3       # Full optimization for performance
lto = true          # Link Time Optimization (LTO) to improve binary size and performance
panic = "abort"     # Reduce binary size by not including stack unwinding code
debug = false       # Disable debug info
