[package]
name = "kanecli"
version = "0.1.0"
authors = ["Tim Ebben"]
license = "MIT"
edition = "2021"

[dependencies]
kanemi = { path = "../kanemi" }
pdok_geocoder = { path = "../pdok_geocoder" }
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.5.23", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }

