[package]
name = "kanemi"
version = "0.1.0"
authors = ["Tim Ebben"]
license = "MIT"
edition = "2021"

[lib]
path = "src/lib.rs"

repository = "https://github.com/tebben/kanemi"
keywords = ["KNMI", "HDF5", "nowcast", "precipitation"]

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdf5 = { package = "hdf5-metno", version = "0.9.0" }
ndarray = "0.16.1"
proj4rs = "0.1.5"
once_cell = "1.20.2"
chrono = "0.4.38"
rumqttc = { version = "0.24.0", features = ["websocket"] }
uuid = { version = "1.4", features = ["v4"] }
