[package]
name = "kanemi"
version = "0.1.0"
authors = ["Tim Ebben"]
license = "MIT"
edition = "2021"
repository = "https://github.com/tebben/kanemi"
keywords = ["KNMI", "HDF5", "nowcast", "precipitation"]

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdf5 = { package = "hdf5-metno", version = "0.9.0" }
netcdf = { version = "0.10.5", features = ["static"] }
ndarray = "0.16.1"
proj4rs = "0.1.5"
once_cell = "1.20.2"
chrono = "0.4.38"
rumqttc = { version = "0.24.0", features = ["websocket"] }
bitstream-io = "2.6.0"
regex = "1.11.1"
tar = "0.4.43"
tempfile = "3.15.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "cy43_p1_reader"
harness = false
