[package]
name = "pdok_location"
version = "0.1.0"
authors = ["Tim Ebben"]
license = "MIT"
edition = "2021"

[lib]
path = "src/lib.rs"

repository = "https://github.com/tebben/kanemi"
keywords = ["PDOK", "Geocoding", "Reverse-geocoding"]

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
mockito = "1.6.1"
